--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack_dev",
   "version": "0.0.1",
   "description": "webpack sample tutorial",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
@@ -15,19 +15,10 @@
   "author": "hdwills",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.2.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "postcss-loader": "^2.0.9",
-    "style-loader": "^0.19.0",
     "webpack": "^3.5.3",
     "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "loadsh": "^1.0.0"
   }
 }
