--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "hdwills",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.11",
+    "style-loader": "^0.21.0",
     "webpack": "^3.5.3",
     "webpack-dev-server": "^2.9.7"
   },
